# learning-wgpu

./: .gitignore  Cargo.toml  README.md  build_wasm.sh  index-template.html  index.html
.github/workflows/: Pages.yml
tutorial1/: Cargo.toml
tutorial1/src/: main.rs
tutorial2/: Cargo.toml
tutorial2-surface/src/: lib.rs
tutorial2/src/: main.rs
tutorial3/: Cargo.toml
tutorial3-pipeline/: Cargo.toml
tutorial3-pipeline/src/: lib.rs  main.rs
tutorial3/src/: lib.rs
tutorial3/src/shaders/: shader.wgsl
tutorial4/: Cargo.toml
tutorial4-buffer/: Cargo.toml
tutorial4-buffer/src/: lib.rs  main.rs
tutorial4/src/: lib.rs
tutorial4/src/shaders/: shader.wgsl
tutorial5/: Cargo.toml
tutorial5-textures/src/: lib.rs  main.rs
tutorial5/src/: lib.rs
tutorial6/: Cargo.toml
tutorial6-uniform/: Cargo.toml
tutorial6-uniforms/src/: lib.rs
tutorial6/src/: lib.rs  main.rs
tutorial6/src/shaders/: shader.wgsl
tutorial7-instancing/: Cargo.toml
tutorial7-instancing/src/: lib.rs  main.rs  shader.wgsl
tutorial8-depth/: Cargo.toml  index.html
tutorial8-depth/src/: lib.rs  main.rs
