[workspace]
members = [
    "tutorial*",
]
resolver = "2"

[workspace.dependencies]
winit = "0.29"
wgpu = { version = "0.19" }
env_logger = "0.11"
glam = { version = "0.27", features = ["bytemuck"] }
log = "0.4"
cfg-if = "1.0"
pollster = "0.3"
console_error_panic_hook = "0.1"
console_log = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
bytemuck = { version = "1.15", features = ["derive"] }
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
instant = { version = "0.1.12", features = ["wasm-bindgen"] }