[package]
name = "tutorial1"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
env_logger.workspace = true 
winit.workspace = true 
log.workspace = true 
wgpu.workspace = true 
cfg-if.workspace = true 
pollster.workspace = true 

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook.workspace = true 
console_log.workspace = true 
wasm-bindgen.workspace = true 
wasm-bindgen-futures.workspace = true 
web-sys.workspace = true 
